[tool.poetry]
name = "dubbo-python-client"
version = "0.1.0"
description = "Python Dubbo Client"
authors = ["zengjing <zengjing@qiyi.com>"]
readme = "README.md"
packages = [{include = "dubbo_python_client"}]

[tool.poetry.dependencies]
python = "^3.9"
kazoo = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
