[tool.poetry]
name = "dubbo-python-client"
version = "0.1.0"
description = "Python Dubbo Client"
authors = ["bitgorust <bitgorust@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
kazoo = "^2.8.0"
uvicorn = "^0.18.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
